--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -5,9 +5,9 @@
     <img src="assets/images/at.gif" alt="">
   </div>
   <div class="btnVice">
-    
-    <a routerLink="/menu"></a>
 
+    <a id="menu" routerLink="/menu"></a>
+    <a id="food" routerLink="#"></a>
   </div>
 </div>
 <div class="absoluteContainer">
