--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,13 +1,13 @@
 .menu {
-    width: 450px;
+    width: 200px;
     display: grid;
-    grid-template-rows: 75px 1fr 75px;
+    grid-template-rows: 0.15fr 1fr 0.15fr;
 }
 
 .contentArea {
     display: grid;
     grid-row: 2 / 3;
-    grid-auto-flow: column;
+    grid-gap: 1em;
 }
 
 .toolbarArea {
@@ -46,5 +46,7 @@
     grid-row: 2 / 3;
     text-align: center;
 }
+
+
 
 
