added the feeding, deleted the grid as it didnt add much and it gave too much trouble

--- a/src/app/device/device.component.css
+++ b/src/app/device/device.component.css
@@ -28,7 +28,6 @@
 .screen {
     background-color: #ceda93;
     font-family: consolas;
-    background-image:url(assets/images/gridvice.png);
     grid-area: s;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -71,7 +70,13 @@
     image-rendering: pixelated;
     height: 96px;
     grid-area: 2 / 2 / 3 / 3;
-    width: 100%;
+    width: 96px;
+}
+
+#meat {
+    image-rendering: pixelated;
+    height: 96px;
+    grid-area: 2 / 2 / 3 / 3;
 }
 
 #at:hover {
