--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="menuItem">
             <a [routerLink]="['/', { outlets: {popup: ['extrainfo'] } } ]">
-                <img src="assets/images/experience.gif" alt="">
+                <img src="assets/images/contact.gif" alt="">
             </a>
             <label>Other sites</label>
         </div>
