--- a/src/app/menu/extra-info/extra-info.component.css
+++ b/src/app/menu/extra-info/extra-info.component.css
@@ -1,11 +1,16 @@
 .info-grid {
-    display: grid;
     width: 25em;
-    grid-template-columns: 2fr;
-    grid-template-rows: 3fr;
 }
 
 .modal-info {
-    padding: 1em 1em 1em 0.5em;
+    padding: 1em 1em 0em 1em;
     border-radius: 0.5em 0 0 0.5em;
+}
+
+.small-icon {
+    width: 1.3em;
+}
+
+a {
+    padding-left: 0.5em;
 }
