finished freshing up the send contact service and refactored messages and states into their own service

--- a/src/app/menu/extra-info/extra-info.component.html
+++ b/src/app/menu/extra-info/extra-info.component.html
@@ -9,6 +9,6 @@
         <a [href]="socialSite.user" target="_blank">{{socialSite.platform}}</a>
       </div>
     </div>
-    <app-contact-tab></app-contact-tab>
+    <app-contact-tab (confirmSave)="onSave()"></app-contact-tab>
   </div>
 </div>
