--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -1,9 +1,9 @@
 <div class="galvice vertical-center">
   <div class="screen">
-    <div class="textContainer">{{actualMessage}}</div>
+    <div class="textContainer">{{this.messageService.actualMessage}}</div>
 
-    <img id="at" [src]="this.state.imgUrl" alt="" (click)="pet()">
-    <img *ngIf="this.state == eatingState" id="meat" src="assets/images/meat.gif">
+    <img id="at" [src]="this.stateService.state.imgUrl" alt="" (click)="pet()">
+    <img *ngIf="this.stateService.state == this.stateService.eatingState" id="meat" src="assets/images/meat.gif">
   </div>
   <div class="btnVice">
 
