made the menu draggable and got another font for the h1s

--- a/src/app/device/device.component.css
+++ b/src/app/device/device.component.css
@@ -1,6 +1,6 @@
 .galvice {  
     width: 20em;
-    background-color: #3593aa;
+    background-color: #206aaf;
     display: grid;
     border-radius: 5%;
     grid-template-columns: repeat(12, 1fr);
