--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -1,4 +1,4 @@
-<div class="galvice vertical-center">
+<div id="device" class="galvice vertical-center">
   <div class="screen">
     <div class="textContainer">{{this.messageService.actualMessage}}</div>
 
