--- a/src/app/menu/extra-info/extra-info.component.html
+++ b/src/app/menu/extra-info/extra-info.component.html
@@ -1,5 +1,5 @@
 <div class="info-grid center-screen">
-  <div class="basic-modal">
+  <div id="contact" class="basic-modal">
     <app-title-modal [title]="this"> </app-title-modal>
     <div class="modal-info">
         {{me.number | phone}} <br>
