--- a/src/app/menu/info/info.component.html
+++ b/src/app/menu/info/info.component.html
@@ -1,5 +1,5 @@
-<div class="center-screen">
-  <div class="expanded-tab-grid">
+<div class="center-screen" >
+  <div id="profile" class="expanded-tab-grid">
     <div class="basic-modal tab-content">
       <app-title-modal [title]="this"> </app-title-modal>
       <app-skills-tab *ngIf="tabToExpand==tab.SKILLS"></app-skills-tab>
