--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="menu basic-modal">
+<div id="modal" class="menu basic-modal">
     <app-title-modal [title]="this"></app-title-modal>
     <div class="contentArea">
         <div class="menuItem">
