--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -2,8 +2,8 @@
 <div class="vertical-center">
   <div class="center-screen">
   <p>
-    Hi, I'm Mateo Delgado! a software engineer, actually residing in Medellin, Colombia, and with 3 years of experience on
-    Web development, currently open for work.
+    Hi, I'm Mateo Delgado! a software engineer, with 3 years of experience on
+    web development.
   </p>
   <p>
     If you'd like to know more about me, please refer to the device on your right for more info!
