small changes for a better universal experience

--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -1,4 +1,4 @@
-<div id="device" class="galvice vertical-center">
+<div id="device" class="galvice">
   <div class="screen">
     <div class="textContainer">{{this.messageService.actualMessage}}</div>
 
@@ -7,8 +7,8 @@
   </div>
   <div class="btnVice">
 
-    <a id="menu" routerLink="/menu"></a>
-    <a id="food" (click)="eat()" routerLink="#"></a>
+    <a id="menu" routerLink="/menu"><div></div></a>
+    <a id="food" (click)="eat()"><div></div></a>
   </div>
 </div>
 <div class="center-screen">
