--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -4,9 +4,9 @@
   <p>
     Hi, I'm Mateo Delgado! a software engineer, with 3 years of experience on
     web development.
+
+    If you'd like to know more about me, please refer to <img src="favicon.ico" alt="">
   </p>
-  <p>
-    If you'd like to know more about me, please refer to the device on your right for more info!
-  </p>
+  
 </div>
 </div>
