--- a/src/app/device/device.component.css
+++ b/src/app/device/device.component.css
@@ -1,5 +1,9 @@
 .galvice {  
-    width: 20em;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 18em;
+    height: 21em;
     background-color: #206aaf;
     display: grid;
     border-radius: 5%;
@@ -17,7 +21,7 @@
     " . . s s s s s s s s . . "
     " . . s s s s s s s s . . "
     " . . . . . . . . . . . . "
-    " . . . b b b b b b . . . "
+    " . . b b b b b b b b . . "
     " . . . . . . . . . . . . "
     " . . . . . . . . . . . . "
     ;
@@ -49,20 +53,24 @@
     grid-template-rows: 1fr;
 }
 
-.btnVice > a {
+.btnVice > a > div {
     background-color: white;
-    border-color: black;
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 50% 50% 50% 50%;
+    border-radius: 50%;
+    width: 1.2em;
+    height: 1.2em;
+    box-shadow: 0px 0px 0.1em 0.2em rgb(49, 49, 49);
+    left: 50%;
+    transform: translateX(-50%);
+    position: relative;
 }
 
 #menu {
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
 }
 
 #food {
-    grid-column: 6 / 7;
+    grid-column: 5 / 7;
+    cursor: pointer;
 }
 
 
