--- a/src/app/menu/info/info.component.css
+++ b/src/app/menu/info/info.component.css
@@ -1,6 +1,6 @@
 .expanded-tab-grid {
     display: grid;
-    width: 50em;
+    width: 30em;
     grid-template-columns: 32fr 1fr;
     grid-row: 1 / 3;
     grid-column: 2 / 3;
@@ -24,7 +24,7 @@
     grid-row: 1 / 2;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     font-size: 1em;
-    z-index: 2;
+    grid-template-rows: 2.1em;
 }
 
 .tab > div {
