added media queries for a better mobile experience

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,14 @@
     position: relative;
     display: grid;
 }
+
+
+@media (height <= 30em) {
+    app-info {
+        grid-column: 1 / 2;
+    }
+
+    app-device {
+        grid-column: 2 / 3;
+    }
+}
