--- a/src/app/device/device.component.css
+++ b/src/app/device/device.component.css
@@ -25,9 +25,22 @@
     " . . . . . . . . . . . . "
     " . . . . . . . . . . . . "
     ;
-
-    
 }
+
+@media (height <= 30em) {
+    .galvice {
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+}
+
+@media (height <= 30em) {
+    .center-screen {
+        bottom: -30%;
+    }
+}
+
 
 .screen {
     background-color: #ceda93;
