--- a/src/app/menu/info/info.component.css
+++ b/src/app/menu/info/info.component.css
@@ -1,9 +1,22 @@
 .expanded-tab-grid {
     display: grid;
-    width: 30em;
+    width: 50em;
     grid-template-columns: 32fr 1fr;
     grid-row: 1 / 3;
     grid-column: 2 / 3;
+}
+
+@media (width <= 50em) {
+    .expanded-tab-grid  {
+        width: 100vw;
+    }
+
+}
+
+@media (height <= 30em) {
+    .expanded-tab-grid {
+        height: 100vh;
+    }
 }
 
 .tab-content {
