--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -2,7 +2,7 @@
   <div class="screen">
     <div class="textContainer">{{this.messageService.actualMessage}}</div>
 
-    <img id="at" [src]="this.stateService.state.imgUrl" alt="" (click)="pet()">
+    <img id="at" [src]="(device$ | async).image" alt="" (click)="pet()">
     <img *ngIf="this.stateService.state == this.stateService.eatingState" id="meat" src="assets/images/meat.gif">
   </div>
   <div class="btnVice">
