--- a/src/app/menu/experience/experience.component.html
+++ b/src/app/menu/experience/experience.component.html
@@ -1,4 +1,4 @@
-<div class="experience-item" *ngFor="let experience of this.data.experiences">
+<div class="experience-item" *ngFor="let experience of (experiences$ | async)">
   <img src="{{experience.icon}}" alt="">
   <h6>{{experience.title}}</h6>
   <p>{{experience.description}}</p>
