added some additional effects for other side effects!

--- a/src/app/menu/extra-info/extra-info.component.html
+++ b/src/app/menu/extra-info/extra-info.component.html
@@ -2,9 +2,9 @@
   <div id="contact" class="basic-modal">
     <app-title-modal [title]="this"> </app-title-modal>
     <div class="modal-info">
-        {{this.data.me.number | phone}} <br>
-        {{this.data.me.email}} <br>
-      <div *ngFor="let socialSite of this.data.socialMedia">
+        {{(phone$ | async) | phone}} <br>
+        {{(email$ | async)}} <br>
+      <div *ngFor="let socialSite of (socialMedia$ | async)">
         <img class="small-icon"[src]=socialSite.icon> 
         <a [href]="socialSite.user" target="_blank">{{socialSite.platform}}</a>
       </div>
