fixed a nasty bug with an infinite loop of requests

--- a/src/app/menu/info/about-tab/about-tab.component.html
+++ b/src/app/menu/info/about-tab/about-tab.component.html
@@ -1,6 +1,6 @@
 
   
   <div id="description" class="content-padding">
-    {{this.data.me.description}}
+    {{(me$ | async).description}}
   </div>
   
